--- a/function.html
+++ b/function.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1> Function Based Programming </h1>
     <script src="function.js"></script>
 </body>
 </html>
