--- a/Dom.html
+++ b/Dom.html
@@ -11,6 +11,12 @@
     <h2 class="content2">hello cybrpm </h2>
     <h2 class="content2">hello vikash singh </h2>
     <h2 class="content2">hello goodmorning </h2>
+
+    <img id="picture" src="canada.jpg" height="200px">
+    <p>In which we change the canada.jpg with kerala.jpg with the help of src attribute</p>
+
+    <h3 class="date">Date() predefined function</h3>
+    
     
     <script src="Dom.js"></script>
 </body>
