--- a/Dom1.html
+++ b/Dom1.html
@@ -8,7 +8,8 @@
 <body>
     
     <h2 style="align-items: center;" id="head2">Hello Vikash Singh </h2>
-
+  
+    <h1> hello cybrom  </h1>
 
 
     <script src="Dom1.js"></script>
