--- a/event-task.html
+++ b/event-task.html
@@ -11,6 +11,8 @@
             background-color: black;
             color: white;
             padding: 20px;
+            border-radius: 10px;
+            text-align: center;
         }
     </style>
 </head>
@@ -31,7 +33,7 @@
 
     <p id="para"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa nulla, delectus, officiis illo quisquam aliquid iusto facere reiciendis doloremque consequuntur minus necessitatibus quibusdam sapiente inventore, nisi deserunt sint nostrum minima!</p>
 
-    <button onclick="dark()"></button>
+    <button onclick="dark()">dark</button>
 
     <script src="event-task.js"></script>
 
