--- a/formvalidation.html
+++ b/formvalidation.html
@@ -26,6 +26,14 @@
     <label for="email">Email</label>
     <input type="text" id="email" placeholder="Enter your email number"><br><br>
 
+    <label for="pass">password</label>
+    <input type="text" id="password" placeholder="Enter your password"><br><br>
+
+
+    <label for="cpass"> confirm password</label>
+    <input type="text" id="cpassword" placeholder="Enter your confirm  password"><br><br>
+
+
 
     <input type="submit">
     </form>
