--- a/second.html
+++ b/second.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-     <h1> Welcome to js world </h1>  
-
+     <h1> welcome to java script </h1>  
+     
     <script src="second.js"></script>
 </body>
 </html>
