--- a/QuerySelector.html
+++ b/QuerySelector.html
@@ -23,7 +23,12 @@
     <h1 class="container">Welcome to Cybrom</h1>
 
     <button id="btn">Click</button>
+
+    <h2 > Welcome back javaScript</h2>
     
     <script src="QueryS.js"></script>
+
+
+   
 </body>
 </html>
