--- a/arrow_function.html
+++ b/arrow_function.html
@@ -6,14 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-  
- <script src="ob1.js"></script>
-<h1> object in java Script </h1>
+    
 
-<form action="">
-    <label for="">id</label>
-    <input type="text">
-</form>
 
+    <script src="Arrow.js"></script>
 </body>
 </html>
