--- a/SetInterval.html
+++ b/SetInterval.html
@@ -11,6 +11,7 @@
      
      <button onclick="start()">start</button>
      <button onclick="stop()">stop</button>
+     <button onclick="reset()">reset</button>
      
     <script src="set.js"></script>
 </body>
