--- a/local_storage.html
+++ b/local_storage.html
@@ -6,19 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="" id="frm" onsubmit="return submit()">
+    <form action="" id="frm" onsubmit="return fun()">
         
-        <label for="" id="name"> name</label>
-        <input type="text" placeholder="name">
+        <label for="" > name</label>
+        <input type="text" placeholder="name" id="name">
         <br><br>
-        <label for="" id="add">address</label>
-        <input type="text" placeholder="address"><br><br>
+        <label for="">address</label>
+        <input type="text" placeholder="address"  id="add"><br><br>
 
-        <label for="" id="contact">Contact</label>
-        <input type="text" placeholder="contact"><br><br>
+        <label for="" >Contact</label>
+        <input type="text" placeholder="contact" id="contact"><br><br>
     
-        <label for="" id="city">city</label>
-        <input type="text" placeholder="city"><br><br>
+        <label for="" >city</label>
+        <input type="text" placeholder="city" id="city"><br><br>
 
         <input type="submit" >
     </form>
