--- a/loop.html
+++ b/loop.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1> Loop Based programming </h1>
-    <h1> javaScript </h1>
+    <h1> loop based programming</h1>
 
     <script src="loop.js"></script>
 </body>
