--- a/signup.html
+++ b/signup.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     
-
-    <form action=""  onsubmit="multi()">
+  <h1> Sign up page </h1>
+    <form action="login.html"  onsubmit="multi()">
 
         <label for=""> name</label>
         <input type="text" id="name"> <br> <br>
@@ -25,4 +25,4 @@
 
     <script src="local1.js"></script>
 </body>
-</html>
+</html> 
