--- a/fetch.html
+++ b/fetch.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
-<h1> ApI fetch </h1>
-<h1 id="apidata"></h1>
-<script src="fetch.js"></script>
+
+    <h1> ApI fetch </h1>
+    <h1 id="apidata"></h1>
+
+    <table border="">
+        <thead>
+            <th>id</th>
+            <th>title</th>
+            <th>body</th>
+        </thead>
+
+       <tbody id="showdata">
+         
+       </tbody>
+
+    </table>
+
+    <script src="fetch.js"></script>
 </body>
+
 </html>
