--- a/database.html
+++ b/database.html
@@ -14,6 +14,8 @@
             <th>contact</th>
             <th>age</th>
             <th>city</th>
+            <th>Delete</th>
+            <th>edit</th>
         </thead>
 
        <tbody id="display">
@@ -21,6 +23,10 @@
        </tbody>
 
     </table>
+
+    <div id="showedit"> 
+        
+    </div>
 
     <script src="database.js"></script>
 </body>
